fix comment flair/quote alignment

--- a/comments.less
+++ b/comments.less
@@ -6,7 +6,7 @@
     border-radius: @defaultBorderRadius !important;
   }
   .usertext-body {
-    margin-top: 30px;
+    margin-top: 10px;
     .md {
       background-color: transparent;
     }
@@ -15,6 +15,12 @@
     overflow: visible !important;
   }
 
+}
+
+.md {
+  blockquote {
+    display: inline-block;
+  }
 }
 
 .res-commentBoxes .comment {
